# llm_asr_clarification

./: .gitignore  README.md  cpu_job.sh  gpu_job.sh  pyproject.toml  requirements.txt  run_job.sh  run_quizpipeline.py  run_scripts.py
src/llm_asr_clarification/: __init__.py  get_logger.py  quiz_analysis.ipynb
src/llm_asr_clarification/models/: OpenAIWrapper.py  __init__.py  prompts.py
src/llm_asr_clarification/scripts/: ambiguity_detection.py  example.py  generate_diarized_transcripts.py  generate_diarized_whisper_transcripts.py  generate_qwen_transcripts.py  generate_transcripts.py  generate_whisper_transcripts.py  quiz_question_generator.py  score_transcripts.py  word_level_diarized_parser.py  word_level_parser.py
src/llm_asr_clarification/scripts/quiz_pipeline/: question_answerer.py  question_generator.py  question_generator_chunked.py  question_scorer.py
src/llm_asr_clarification/scripts/transcription/custom/: generate.py  generate_diarized.py
src/llm_asr_clarification/scripts/transcription/whisper/: generate_diarized.py
src/llm_asr_clarification/utils/: diarization_utils.py
